--- a/biografia.html
+++ b/biografia.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="principal">
 		<div>
-			<img src="/imagens/capa.png" alt="capa">
+			<img src="./imagens/capa.png" alt="capa">
 		</div>
 
 		<header>
