--- a/campanhas.html
+++ b/campanhas.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="principal">
 		<div>
-			<img src="/imagens/capa.png" alt="capa">
+			<img src="./imagens/capa.png" alt="capa">
 		</div>
 
 		<header>
@@ -33,7 +33,7 @@
 				imperdiet.</p>
 
 				
-				<img class="borda" src="/imagens/foto1.png" alt="foto1">
+				<img class="borda" src="./imagens/foto1.png" alt="foto1">
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
 				incididunt ut labore et dolore magna aliqua. Suspendisse interdum consectetur 
@@ -41,7 +41,7 @@
 				Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Blandit cursus
 				risus at ultrices mi tempus imperdiet.</p>
 
-				<img class="borda" src="/imagens/foto2.png" alt="foto2">
+				<img class="borda" src="./imagens/foto2.png" alt="foto2">
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
 				ut labore et dolore magna aliqua. Suspendisse interdum consectetur libero id faucibus nisl. 
@@ -49,7 +49,7 @@
 				proin libero nunc consequat interdum varius. Blandit cursus risus at ultrices mi tempus 
 				imperdiet.</p>
 
-				<img class="borda" src="/imagens/foto3.png" alt="foto3">
+				<img class="borda" src="./imagens/foto3.png" alt="foto3">
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
 				incididunt ut labore et dolore magna aliqua. Suspendisse interdum consectetur 
