--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="principal">
 		<div>
-			<img src="/imagens/capa.png" alt="capa">
+			<img src="./imagens/capa.png" alt="capa">
 		</div>
 
 		<header>
@@ -32,7 +32,7 @@
 				nunc consequat interdum varius. Blandit cursus risus at ultrices mi tempus 
 				imperdiet.</p>
 
-				<img class="borda" src="/imagens/foto1.png" alt="foto1">
+				<img class="borda" src="./imagens/foto1.png" alt="foto1">
 				
 				<div>
 					<br>
